starting to write some stuff from the top to the bottom
