# src/handler/AllianceHandler.js
@@ -1,24 +1,27 @@
 
 	"use strict";
 
-	const { EntityHandler } = require("handler/");
+	const { EntityHandler } 	= require("handler/");
+	const { Alliance } 			= require("model/");
 
 	class AllianceHandler extends EntityHandler {
 
-		static getExecutor () {
-			return async (req, res) => {
-				let store 		= await AllianceHandler.getStore();
-				let alliance 	= await store.findById(req.swagger.params.allianceID.value);
-				res.json(await alliance.getExecutor().toJSON());
-			};
+		static get_executor () {
+			return ({ swagger: { params: { alliance_id } } }, { json }) =>
+				Alliance
+					.find_or_create(alliance_id.value)
+					.get_executor()
+					.toJSON()
+					.then(json);
 		}
 
-		static getCorporations () {
-			return async (req, res) => {
-				let store 		= await AllianceHandler.getStore();
-				let alliance 	= await store.findById(req.swagger.params.allianceID.value);
-				res.json(await alliance.getCorporations().toJSON());
-			};
+		static get_corporations () {
+			return ({ swagger: { params: { alliance_id } } }, { json }) =>
+				Alliance
+					.find_or_create(alliance_id.value)
+					.get_corporations()
+					.toJSON()
+					.then(json);
 		}
 
 	}
